Parser first commit

--- a/config.cfg
+++ b/config.cfg
@@ -1,4 +1,7 @@
 {
     "implementation": "c",
-    "output_folder": "output"
+    "output_folder": "output",
+    "functions": ["bfunctions"],
+    "compositions": ["ppa"],
+    "metacomps": ["metacompositions"]
 }
