GUI And reductions. Too much to work with

--- a/config.cfg
+++ b/config.cfg
@@ -2,5 +2,6 @@
     "implementation": "c",
     "functions": ["bfunctions"],
     "compositions": ["ppa"],
+    "reductions": ["reductions"],
     "metacomps": ["metacompositions"]
 }
