Added named functions and compositions

--- a/config.cfg
+++ b/config.cfg
@@ -1,7 +1,7 @@
 {
     "implementation": "c",
-    "functions": ["bfunctions"],
-    "compositions": ["ppa"],
+    "functions": ["bfunctions", "namedfunctions"],
+    "compositions": ["ppa", "namedalgebra"],
     "reductions": ["reductions"],
     "metacomps": ["metacompositions"]
 }
