Implemented parsing for named functions

--- a/config.cfg
+++ b/config.cfg
@@ -1,4 +1,5 @@
 {
+    "algebra": "spa",
     "implementation": "c",
     "functions": ["bfunctions", "namedfunctions"],
     "compositions": ["ppa", "namedalgebra"],
