More on OpenCV support In config.cfg added entry "framework" Uncommented code generation Added reading header files Fixed few small bugs in cv_one and cv_thresh Added to compile.py creation of headers

--- a/config.cfg
+++ b/config.cfg
@@ -1,6 +1,7 @@
 {
-    "algebra": "spa",
+    "algebra": "ppa",
     "implementation": "c",
+    "frameworks": ["opencv"],
     "functions": ["bfunctions", "namedfunctions"],
     "compositions": ["ppa", "namedalgebra"],
     "reductions": ["reductions"],
